@@ -23,9 +23,6 @@
 		<PROPERTY NAME="lineComment" VALUE="rem" />
 	</PROPS>
 	<RULES IGNORE_CASE="TRUE" HIGHLIGHT_DIGITS="FALSE">
-		<!-- 'echo off' statements -->
-		<SEQ TYPE="KEYWORD3">@</SEQ>
-
 		<SEQ TYPE="OPERATOR">+</SEQ>
 		<SEQ TYPE="OPERATOR">|</SEQ>
 		<SEQ TYPE="OPERATOR">&amp;</SEQ>
@@ -38,7 +35,11 @@
 
 		<!-- comments -->
 		<EOL_SPAN_REGEXP AT_WHITESPACE_END="TRUE" HASH_CHAR="R" TYPE="COMMENT1">REM\s</EOL_SPAN_REGEXP>
+		<EOL_SPAN_REGEXP AT_WHITESPACE_END="TRUE" HASH_CHAR="@" TYPE="COMMENT1">@REM\s</EOL_SPAN_REGEXP>
 		<EOL_SPAN AT_WHITESPACE_END="TRUE" TYPE="COMMENT1">::</EOL_SPAN>
+
+		<!-- 'echo off' statements -->
+		<SEQ TYPE="KEYWORD3">@</SEQ>
 
 		<!-- literals -->
 		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="TRUE">
