@@ -2091,6 +2091,8 @@ plugin-manager.title=Plugin Manager
 plugin-manager.export-url=http://plugins.jedit.org/export/gzip_plugin_manager.php
 plugin-manager.mirror-url=http://plugins.jedit.org/export/mirror_list.php
 
+plugin-manager.hide-libraries=Hide libraries
+
 plugin-manager.mgr-options=Download Options...
 plugin-manager.plugin-options=Plugin Options...
 plugin-manager.done=Close
